--- a/관광지 지도 시각화/관광지_지도_시각화(Folium)-v3(국내외 비교).ipynb
+++ b/관광지 지도 시각화/관광지_지도_시각화(Folium)-v3(국내외 비교).ipynb
@@ -3,22 +3,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef8a86ae",
+   "source": [
+    "import folium\r\n",
+    "import pandas as pd\r\n",
+    "# import geopandas as gpd\r\n",
+    "import matplotlib.pyplot as plt"
+   ],
+   "outputs": [],
    "metadata": {
     "id": "ef8a86ae"
-   },
-   "outputs": [],
-   "source": [
-    "import folium\n",
-    "import pandas as pd\n",
-    "# import geopandas as gpd\n",
-    "import matplotlib.pyplot as plt"
-   ]
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7962a301",
+   "source": [
+    "map1 = folium.Map(location=[37.566535,126.97796919999996],zoom_start=8,\r\n",
+    "                 zoom_control=False, tiles='https://tiles.stadiamaps.com/tiles/outdoors/{z}/{x}/{y}{r}.png',\r\n",
+    "                 attr='&copy; <a href=\"https://stadiamaps.com/\">Stadia Maps</a>, &copy; <a href=\"https://openmaptiles.org/\">OpenMapTiles</a> &copy; <a href=\"http://openstreetmap.org\">OpenStreetMap</a> contributors')\r\n",
+    "#map1"
+   ],
+   "outputs": [],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -26,215 +31,168 @@
     },
     "id": "7962a301",
     "outputId": "44664dd7-2c7a-4319-a032-fcec7242b5f1"
-   },
-   "outputs": [],
-   "source": [
-    "map1 = folium.Map(location=[37.566535,126.97796919999996],zoom_start=8,\n",
-    "                 zoom_control=False, tiles='https://tiles.stadiamaps.com/tiles/outdoors/{z}/{x}/{y}{r}.png',\n",
-    "                 attr='&copy; <a href=\"https://stadiamaps.com/\">Stadia Maps</a>, &copy; <a href=\"https://openmaptiles.org/\">OpenMapTiles</a> &copy; <a href=\"http://openstreetmap.org\">OpenStreetMap</a> contributors')\n",
-    "#map1"
-   ]
+   }
   },
   {
    "cell_type": "markdown",
-   "id": "1b94affa",
-   "metadata": {},
    "source": [
     "#### for colab"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ea8ixuVM5G50",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "ea8ixuVM5G50",
-    "outputId": "81844811-70c2-4181-fb32-387fa9999d25"
-   },
-   "outputs": [],
-   "source": [
-    "# from google.colab import drive\n",
-    "# drive.mount('/content/drive')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6e305987",
-   "metadata": {
-    "id": "6e305987"
-   },
-   "outputs": [],
-   "source": [
-    "# data=pd.read_csv('../content/drive/Shareddrives/이노백이션 팀 프로젝트/data/전국관광지정보표준데이터.csv', engine='python',encoding='cp949')\n",
-    "# data"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "j320b_ZTe7GB",
-   "metadata": {
-    "id": "j320b_ZTe7GB"
-   },
    "source": [
     "### 관광지 marker cluster"
-   ]
+   ],
+   "metadata": {
+    "id": "j320b_ZTe7GB"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abbf33d1",
+   "source": [
+    "from folium.plugins import MarkerCluster\r\n",
+    "mc = MarkerCluster().add_to(map1)"
+   ],
+   "outputs": [],
    "metadata": {
     "id": "abbf33d1"
-   },
-   "outputs": [],
-   "source": [
-    "from folium.plugins import MarkerCluster\n",
-    "mc = MarkerCluster().add_to(map1)"
-   ]
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c37b4b7d",
+   "source": [
+    "data2 = data[['관광지명','위도','경도']]\r\n",
+    "data2"
+   ],
+   "outputs": [],
    "metadata": {
     "id": "c37b4b7d"
-   },
-   "outputs": [],
-   "source": [
-    "data2 = data[['관광지명','위도','경도']]\n",
-    "data2"
-   ]
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fbda4a1",
+   "source": [
+    "data2 = data2.dropna()\r\n",
+    "data2"
+   ],
+   "outputs": [],
    "metadata": {
     "id": "3fbda4a1"
-   },
-   "outputs": [],
-   "source": [
-    "data2 = data2.dropna()\n",
-    "data2"
-   ]
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b77d4ef6",
-   "metadata": {
-    "id": "b77d4ef6"
-   },
-   "outputs": [],
    "source": [
     "leng = len(data2)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "b77d4ef6"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78409559",
-   "metadata": {
-    "id": "78409559"
-   },
-   "outputs": [],
    "source": [
     "for i in range(leng):\n",
     "    folium.Marker([data2.iloc[i][1],data2.iloc[i][2]],popup=data2.iloc[i][0]).add_to(mc)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "78409559"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09ce5d67",
+   "source": [
+    "map1"
+   ],
+   "outputs": [],
    "metadata": {
     "id": "09ce5d67",
     "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "map1"
-   ]
+   }
   },
   {
    "cell_type": "markdown",
-   "id": "RZ9mRPkGfRhr",
-   "metadata": {
-    "id": "RZ9mRPkGfRhr"
-   },
    "source": [
     "# Folium 지역 경계선 구분하기"
-   ]
+   ],
+   "metadata": {
+    "id": "RZ9mRPkGfRhr"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "zV7ax7x7giBS",
+   "source": [
+    "#skorea-geo.json\r\n",
+    "#skorea-municipalities-geo\r\n",
+    "#skorea-provinces-geo"
+   ],
+   "outputs": [],
    "metadata": {
     "id": "zV7ax7x7giBS"
-   },
-   "outputs": [],
-   "source": [
-    "#skorea-geo.json\n",
-    "#skorea-municipalities-geo\n",
-    "#skorea-provinces-geo"
-   ]
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6szI3N7RlPkq",
-   "metadata": {
-    "id": "6szI3N7RlPkq"
-   },
-   "outputs": [],
    "source": [
     "import json"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "6szI3N7RlPkq"
+   }
   },
   {
    "cell_type": "markdown",
-   "id": "b8daf393",
-   "metadata": {},
    "source": [
     "### 전국 하나로"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "L8i3C3UMlJcm",
+   "source": [
+    "with open('../data/skorea-geo.json',encoding = 'euc-kr') as file:\r\n",
+    "    geo = file.read()\r\n",
+    "    geo = json.loads(geo)\r\n",
+    "    file.close()"
+   ],
+   "outputs": [],
    "metadata": {
     "id": "L8i3C3UMlJcm"
-   },
-   "outputs": [],
-   "source": [
-    "with open('skorea-geo.json',encoding = 'euc-kr') as file:\n",
-    "    geo = file.read()\n",
-    "    geo = json.loads(geo)\n",
-    "    file.close()"
-   ]
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ZaC5NuSlMnN",
-   "metadata": {
-    "id": "3ZaC5NuSlMnN"
-   },
-   "outputs": [],
    "source": [
     "geo"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "3ZaC5NuSlMnN"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tMQADrUjldhZ",
+   "source": [
+    "folium.GeoJson(geo).add_to(map1)\r\n",
+    "map1"
+   ],
+   "outputs": [],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -242,174 +200,151 @@
     },
     "id": "tMQADrUjldhZ",
     "outputId": "d56111b2-dfd2-48f1-f389-aa1447a38501"
-   },
-   "outputs": [],
-   "source": [
-    "folium.GeoJson(geo).add_to(map1)\n",
-    "map1"
-   ]
+   }
   },
   {
    "cell_type": "markdown",
-   "id": "6d804f6f",
-   "metadata": {},
    "source": [
     "### 시, 동 단위 세부"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11h7eBVBluf_",
-   "metadata": {
-    "id": "11h7eBVBluf_"
-   },
-   "outputs": [],
    "source": [
     "with open('data/skorea-municipalities-geo.json',encoding = 'euc-kr') as file:\n",
     "    geo2 = file.read()\n",
     "    geo2 = json.loads(geo2)\n",
     "    file.close()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "id": "11h7eBVBluf_"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "858d7994",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "folium.GeoJson(geo2).add_to(map1)\n",
     "map1"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "da62d9ee",
-   "metadata": {},
    "source": [
     "### 17개 광역시, 도 단위"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37544f39",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "with open('skorea-provinces-geo.json',encoding = 'euc-kr') as file:\n",
     "    geo3 = file.read()\n",
     "    geo3 = json.loads(geo3)\n",
     "    file.close()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1c5288a",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "folium.GeoJson(geo3).add_to(map1)\n",
     "map1"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "699095cb",
-   "metadata": {},
    "source": [
     "### 방문객 데이터"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68f8ed06",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "visit=pd.read_csv('외래관광객 조사_20210729.csv')\n",
     "visit2 = visit.T\n",
     "# visit_tot=visit.iloc[3][2:]\n",
     "# visit_tot\n",
     "visit2"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17f8d8b2",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "visit2.info()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "48ca41bb",
-   "metadata": {},
    "source": [
     "### 지도에 방문객 수 표시"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9deb6d0f",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "geo3.keys()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5374177",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "geo3"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b4f0542",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "len(geo3['features'])"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1570b2e",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "for i in range(16):\n",
     "    print(geo3['features'][i]['properties'][\"NAME_1\"] )"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "e0deec62",
-   "metadata": {},
    "source": [
     "#### 세종 데이터가 지역 정보에 없다 -> 데이터에서도 제거"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc147df0",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# 세종 데이터 제거\n",
     "visit2.drop(index='세종', inplace=True)\n",
@@ -420,86 +355,78 @@
     "              'Gyeonggi-do','Gangwon-do', 'Chungcheongbuk-do','Chungcheongnam-do','Jeollabuk-do', 'Jeollanam-do', \\\n",
     "             'Gyeongsangbuk-do','Gyeongsangnam-do', 'Jeju']\n",
     "visit2"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "6518a99e",
-   "metadata": {},
    "source": [
     "데이터 형변환"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3401a2e4",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "visit2= visit2[[\"전체방문객\",\"지역\"]]\n",
     "\n",
     "visit2 = visit2.astype({'전체방문객': 'float32'})\n",
     "\n",
     "visit2['전체방문객']"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "faa8e3c4",
-   "metadata": {},
    "source": [
     "#### log scaling"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "438b0186",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import math\n",
     "import numpy as np"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "226971fe",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "np.log2(4)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d2f42c6",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "visit2['방문객2']=np.log2(visit2['전체방문객'])\n",
     "visit2['방문객10']=np.log10(visit2['전체방문객'])"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7c275dd",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "visit2"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de33e014",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "choro = folium.Choropleth(geo_data = geo3,\n",
     "                 data = visit2,\n",
@@ -508,42 +435,38 @@
     "                 legend_name='해외 방문객 비율',\n",
     "                 fill_color='BuPu',\n",
     "                 highlight =True).add_to(map1)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "160b65ee",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "choro.geojson.add_child(folium.features.GeoJsonTooltip(['NAME_1'], labels=False))"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58f9c07c",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "map1"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "2d68be8a",
-   "metadata": {},
    "source": [
     "#### 지역별 관광객 편차가 커서 로그 스케일링 해서 시각화"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7435c7bc",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "choro = folium.Choropleth(geo_data = geo3,\n",
     "                 data = visit2,\n",
@@ -554,22 +477,20 @@
     "                 highlight =True).add_to(map1)\n",
     "choro.geojson.add_child(folium.features.GeoJsonTooltip(['NAME_1'], labels=False))\n",
     "map1"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "5f21939a",
-   "metadata": {},
    "source": [
     "### 국내 방문객 수 시각화"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23d964dc",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#국민여행조사 _ 국내여행_20210730\n",
     "visit_in=pd.read_csv('국민여행조사 _ 국내여행_20210730.csv')\n",
@@ -577,14 +498,13 @@
     "# visit_tot=visit.iloc[3][2:]\n",
     "# visit_tot\n",
     "visit_in2"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55a60067",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "visit_in2.drop(index='세종', inplace=True)\n",
     "\n",
@@ -594,38 +514,35 @@
     "              'Gyeonggi-do','Gangwon-do', 'Chungcheongbuk-do','Chungcheongnam-do','Jeollabuk-do', 'Jeollanam-do', \\\n",
     "             'Gyeongsangbuk-do','Gyeongsangnam-do', 'Jeju']\n",
     "visit_in2"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a976da0e",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "visit_in2= visit_in2[[\"전체방문객\",\"지역\"]]\n",
     "\n",
     "visit_in2 = visit_in2.astype({'전체방문객': 'float32'})\n",
     "\n",
     "visit_in2['전체방문객']"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9612cb2d",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "visit_in2"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27e0585f",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "choro = folium.Choropleth(geo_data = geo3,\n",
     "                 data = visit_in2,\n",
@@ -636,59 +553,54 @@
     "                 highlight =True).add_to(map1)\n",
     "choro.geojson.add_child(folium.features.GeoJsonTooltip(['NAME_1'], labels=False))\n",
     "map1"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "73e61e4e",
-   "metadata": {},
    "source": [
     "### 국내외 방문객수 비율 시각화"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6883df3",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#차이\n",
     "visit_all= visit_in2\n",
     "visit_all['국내외 방문객비율차'] =visit_in2['전체방문객']-visit2['전체방문객']\n",
     "visit_all"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c70d7fc",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#차이\n",
     "visit_all= visit_in2\n",
     "visit_all['국내외 방문객비례'] =visit_in2['전체방문객']/visit2['전체방문객']# 국내 / 외국인\n",
     "visit_all['국내외 방문객비례(로그)'] =np.log2(visit_in2['전체방문객']/visit2['전체방문객'])\n",
     "visit_all"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c08f196c",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "visit_all.sort_values(by=['국내외 방문객비례'], axis=0, ascending=False)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39745ae8",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "choro = folium.Choropleth(geo_data = geo3,\n",
     "                 data = visit_all,\n",
@@ -699,15 +611,16 @@
     "                 highlight =True).add_to(map1)\n",
     "choro.geojson.add_child(folium.features.GeoJsonTooltip(['NAME_1'], labels=False))\n",
     "map1"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa7eee2d",
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
