--- a/관광지 지도 시각화/관광지_지도_시각화(Folium)-v3(국내외 비교).ipynb
+++ b/관광지 지도 시각화/관광지_지도_시각화(Folium)-v3(국내외 비교).ipynb
@@ -100,7 +100,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "for i in range(leng):\n",
+    "for i in range(leng):\r\n",
     "    folium.Marker([data2.iloc[i][1],data2.iloc[i][2]],popup=data2.iloc[i][0]).add_to(mc)"
    ],
    "outputs": [],
@@ -213,9 +213,9 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "with open('data/skorea-municipalities-geo.json',encoding = 'euc-kr') as file:\n",
-    "    geo2 = file.read()\n",
-    "    geo2 = json.loads(geo2)\n",
+    "with open('data/skorea-municipalities-geo.json',encoding = 'euc-kr') as file:\r\n",
+    "    geo2 = file.read()\r\n",
+    "    geo2 = json.loads(geo2)\r\n",
     "    file.close()"
    ],
    "outputs": [],
@@ -227,7 +227,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "folium.GeoJson(geo2).add_to(map1)\n",
+    "folium.GeoJson(geo2).add_to(map1)\r\n",
     "map1"
    ],
    "outputs": [],
@@ -244,9 +244,9 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "with open('skorea-provinces-geo.json',encoding = 'euc-kr') as file:\n",
-    "    geo3 = file.read()\n",
-    "    geo3 = json.loads(geo3)\n",
+    "with open('skorea-provinces-geo.json',encoding = 'euc-kr') as file:\r\n",
+    "    geo3 = file.read()\r\n",
+    "    geo3 = json.loads(geo3)\r\n",
     "    file.close()"
    ],
    "outputs": [],
@@ -256,7 +256,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "folium.GeoJson(geo3).add_to(map1)\n",
+    "folium.GeoJson(geo3).add_to(map1)\r\n",
     "map1"
    ],
    "outputs": [],
@@ -273,10 +273,10 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "visit=pd.read_csv('외래관광객 조사_20210729.csv')\n",
-    "visit2 = visit.T\n",
-    "# visit_tot=visit.iloc[3][2:]\n",
-    "# visit_tot\n",
+    "visit=pd.read_csv('../data/외래관광객 조사_20210729.csv')\r\n",
+    "visit2 = visit.T\r\n",
+    "# visit_tot=visit.iloc[3][2:]\r\n",
+    "# visit_tot\r\n",
     "visit2"
    ],
    "outputs": [],
@@ -329,7 +329,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "for i in range(16):\n",
+    "for i in range(16):\r\n",
     "    print(geo3['features'][i]['properties'][\"NAME_1\"] )"
    ],
    "outputs": [],
@@ -346,14 +346,14 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# 세종 데이터 제거\n",
-    "visit2.drop(index='세종', inplace=True)\n",
-    "\n",
-    "visit2.rename(columns={3: \"전체방문객\"},inplace=True)\n",
-    "visit2= visit2[2:]\n",
-    "visit2['지역']=['Seoul','Incheon','Daejeon','Daegu', 'Busan','Gwangju', 'Ulsan', \\\n",
-    "              'Gyeonggi-do','Gangwon-do', 'Chungcheongbuk-do','Chungcheongnam-do','Jeollabuk-do', 'Jeollanam-do', \\\n",
-    "             'Gyeongsangbuk-do','Gyeongsangnam-do', 'Jeju']\n",
+    "# 세종 데이터 제거\r\n",
+    "visit2.drop(index='세종', inplace=True)\r\n",
+    "\r\n",
+    "visit2.rename(columns={3: \"전체방문객\"},inplace=True)\r\n",
+    "visit2= visit2[2:]\r\n",
+    "visit2['지역']=['Seoul','Incheon','Daejeon','Daegu', 'Busan','Gwangju', 'Ulsan', \\\r\n",
+    "              'Gyeonggi-do','Gangwon-do', 'Chungcheongbuk-do','Chungcheongnam-do','Jeollabuk-do', 'Jeollanam-do', \\\r\n",
+    "             'Gyeongsangbuk-do','Gyeongsangnam-do', 'Jeju']\r\n",
     "visit2"
    ],
    "outputs": [],
@@ -370,10 +370,10 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "visit2= visit2[[\"전체방문객\",\"지역\"]]\n",
-    "\n",
-    "visit2 = visit2.astype({'전체방문객': 'float32'})\n",
-    "\n",
+    "visit2= visit2[[\"전체방문객\",\"지역\"]]\r\n",
+    "\r\n",
+    "visit2 = visit2.astype({'전체방문객': 'float32'})\r\n",
+    "\r\n",
     "visit2['전체방문객']"
    ],
    "outputs": [],
@@ -390,7 +390,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "import math\n",
+    "import math\r\n",
     "import numpy as np"
    ],
    "outputs": [],
@@ -409,7 +409,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "visit2['방문객2']=np.log2(visit2['전체방문객'])\n",
+    "visit2['방문객2']=np.log2(visit2['전체방문객'])\r\n",
     "visit2['방문객10']=np.log10(visit2['전체방문객'])"
    ],
    "outputs": [],
@@ -428,12 +428,12 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "choro = folium.Choropleth(geo_data = geo3,\n",
-    "                 data = visit2,\n",
-    "                 columns = [\"지역\",\"전체방문객\"],\n",
-    "                 key_on = 'feature.properties.NAME_1',\n",
-    "                 legend_name='해외 방문객 비율',\n",
-    "                 fill_color='BuPu',\n",
+    "choro = folium.Choropleth(geo_data = geo3,\r\n",
+    "                 data = visit2,\r\n",
+    "                 columns = [\"지역\",\"전체방문객\"],\r\n",
+    "                 key_on = 'feature.properties.NAME_1',\r\n",
+    "                 legend_name='해외 방문객 비율',\r\n",
+    "                 fill_color='BuPu',\r\n",
     "                 highlight =True).add_to(map1)"
    ],
    "outputs": [],
@@ -468,14 +468,14 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "choro = folium.Choropleth(geo_data = geo3,\n",
-    "                 data = visit2,\n",
-    "                 columns = [\"지역\",\"방문객2\"],\n",
-    "                 key_on = 'feature.properties.NAME_1',\n",
-    "                 legend_name='해외 방문객 비율(log)',\n",
-    "                 fill_color='BuPu',\n",
-    "                 highlight =True).add_to(map1)\n",
-    "choro.geojson.add_child(folium.features.GeoJsonTooltip(['NAME_1'], labels=False))\n",
+    "choro = folium.Choropleth(geo_data = geo3,\r\n",
+    "                 data = visit2,\r\n",
+    "                 columns = [\"지역\",\"방문객2\"],\r\n",
+    "                 key_on = 'feature.properties.NAME_1',\r\n",
+    "                 legend_name='해외 방문객 비율(log)',\r\n",
+    "                 fill_color='BuPu',\r\n",
+    "                 highlight =True).add_to(map1)\r\n",
+    "choro.geojson.add_child(folium.features.GeoJsonTooltip(['NAME_1'], labels=False))\r\n",
     "map1"
    ],
    "outputs": [],
@@ -492,11 +492,11 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "#국민여행조사 _ 국내여행_20210730\n",
-    "visit_in=pd.read_csv('국민여행조사 _ 국내여행_20210730.csv')\n",
-    "visit_in2 = visit_in.T\n",
-    "# visit_tot=visit.iloc[3][2:]\n",
-    "# visit_tot\n",
+    "#국민여행조사 _ 국내여행_20210730\r\n",
+    "visit_in=pd.read_csv('국민여행조사 _ 국내여행_20210730.csv')\r\n",
+    "visit_in2 = visit_in.T\r\n",
+    "# visit_tot=visit.iloc[3][2:]\r\n",
+    "# visit_tot\r\n",
     "visit_in2"
    ],
    "outputs": [],
@@ -506,13 +506,13 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "visit_in2.drop(index='세종', inplace=True)\n",
-    "\n",
-    "visit_in2.rename(columns={3: \"전체방문객\"},inplace=True)\n",
-    "visit_in2= visit_in2[2:]\n",
-    "visit_in2['지역']=['Seoul', 'Busan','Daegu','Incheon','Gwangju','Daejeon','Ulsan', \\\n",
-    "              'Gyeonggi-do','Gangwon-do', 'Chungcheongbuk-do','Chungcheongnam-do','Jeollabuk-do', 'Jeollanam-do', \\\n",
-    "             'Gyeongsangbuk-do','Gyeongsangnam-do', 'Jeju']\n",
+    "visit_in2.drop(index='세종', inplace=True)\r\n",
+    "\r\n",
+    "visit_in2.rename(columns={3: \"전체방문객\"},inplace=True)\r\n",
+    "visit_in2= visit_in2[2:]\r\n",
+    "visit_in2['지역']=['Seoul', 'Busan','Daegu','Incheon','Gwangju','Daejeon','Ulsan', \\\r\n",
+    "              'Gyeonggi-do','Gangwon-do', 'Chungcheongbuk-do','Chungcheongnam-do','Jeollabuk-do', 'Jeollanam-do', \\\r\n",
+    "             'Gyeongsangbuk-do','Gyeongsangnam-do', 'Jeju']\r\n",
     "visit_in2"
    ],
    "outputs": [],
@@ -522,10 +522,10 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "visit_in2= visit_in2[[\"전체방문객\",\"지역\"]]\n",
-    "\n",
-    "visit_in2 = visit_in2.astype({'전체방문객': 'float32'})\n",
-    "\n",
+    "visit_in2= visit_in2[[\"전체방문객\",\"지역\"]]\r\n",
+    "\r\n",
+    "visit_in2 = visit_in2.astype({'전체방문객': 'float32'})\r\n",
+    "\r\n",
     "visit_in2['전체방문객']"
    ],
    "outputs": [],
@@ -544,14 +544,14 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "choro = folium.Choropleth(geo_data = geo3,\n",
-    "                 data = visit_in2,\n",
-    "                 columns = [\"지역\",\"전체방문객\"],\n",
-    "                 key_on = 'feature.properties.NAME_1',\n",
-    "                 legend_name='국내 방문객 비율',\n",
-    "                 fill_color='BuPu',\n",
-    "                 highlight =True).add_to(map1)\n",
-    "choro.geojson.add_child(folium.features.GeoJsonTooltip(['NAME_1'], labels=False))\n",
+    "choro = folium.Choropleth(geo_data = geo3,\r\n",
+    "                 data = visit_in2,\r\n",
+    "                 columns = [\"지역\",\"전체방문객\"],\r\n",
+    "                 key_on = 'feature.properties.NAME_1',\r\n",
+    "                 legend_name='국내 방문객 비율',\r\n",
+    "                 fill_color='BuPu',\r\n",
+    "                 highlight =True).add_to(map1)\r\n",
+    "choro.geojson.add_child(folium.features.GeoJsonTooltip(['NAME_1'], labels=False))\r\n",
     "map1"
    ],
    "outputs": [],
@@ -568,9 +568,9 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "#차이\n",
-    "visit_all= visit_in2\n",
-    "visit_all['국내외 방문객비율차'] =visit_in2['전체방문객']-visit2['전체방문객']\n",
+    "#차이\r\n",
+    "visit_all= visit_in2\r\n",
+    "visit_all['국내외 방문객비율차'] =visit_in2['전체방문객']-visit2['전체방문객']\r\n",
     "visit_all"
    ],
    "outputs": [],
@@ -580,10 +580,10 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "#차이\n",
-    "visit_all= visit_in2\n",
-    "visit_all['국내외 방문객비례'] =visit_in2['전체방문객']/visit2['전체방문객']# 국내 / 외국인\n",
-    "visit_all['국내외 방문객비례(로그)'] =np.log2(visit_in2['전체방문객']/visit2['전체방문객'])\n",
+    "#차이\r\n",
+    "visit_all= visit_in2\r\n",
+    "visit_all['국내외 방문객비례'] =visit_in2['전체방문객']/visit2['전체방문객']# 국내 / 외국인\r\n",
+    "visit_all['국내외 방문객비례(로그)'] =np.log2(visit_in2['전체방문객']/visit2['전체방문객'])\r\n",
     "visit_all"
    ],
    "outputs": [],
@@ -602,14 +602,14 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "choro = folium.Choropleth(geo_data = geo3,\n",
-    "                 data = visit_all,\n",
-    "                 columns = [\"지역\",\"국내외 방문객비례(로그)\"],\n",
-    "                 key_on = 'feature.properties.NAME_1',\n",
-    "                 legend_name='국내외 방문객 비례(로그2)',\n",
-    "                 fill_color='BuPu',\n",
-    "                 highlight =True).add_to(map1)\n",
-    "choro.geojson.add_child(folium.features.GeoJsonTooltip(['NAME_1'], labels=False))\n",
+    "choro = folium.Choropleth(geo_data = geo3,\r\n",
+    "                 data = visit_all,\r\n",
+    "                 columns = [\"지역\",\"국내외 방문객비례(로그)\"],\r\n",
+    "                 key_on = 'feature.properties.NAME_1',\r\n",
+    "                 legend_name='국내외 방문객 비례(로그2)',\r\n",
+    "                 fill_color='BuPu',\r\n",
+    "                 highlight =True).add_to(map1)\r\n",
+    "choro.geojson.add_child(folium.features.GeoJsonTooltip(['NAME_1'], labels=False))\r\n",
     "map1"
    ],
    "outputs": [],
