--- a/관광지 지도 시각화/관광지_지도_시각화(Folium)-v3(국내외 비교).ipynb
+++ b/관광지 지도 시각화/관광지_지도_시각화(Folium)-v3(국내외 비교).ipynb
@@ -493,7 +493,7 @@
    "execution_count": null,
    "source": [
     "#국민여행조사 _ 국내여행_20210730\r\n",
-    "visit_in=pd.read_csv('국민여행조사 _ 국내여행_20210730.csv')\r\n",
+    "visit_in=pd.read_csv('../data/국민여행조사 _ 국내여행_20210730.csv')\r\n",
     "visit_in2 = visit_in.T\r\n",
     "# visit_tot=visit.iloc[3][2:]\r\n",
     "# visit_tot\r\n",
