--- a/실내외 관광지별 입장객 통계와 월별 코로나 확진자수 비교/군산 관광지별 입장객 통계.ipynb
+++ b/실내외 관광지별 입장객 통계와 월별 코로나 확진자수 비교/군산 관광지별 입장객 통계.ipynb
@@ -47,9 +47,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "source": [
-    "column_labels = columns1\n",
-    "column_labels = columns1+_2019\n",
-    "column_labels.append(\"2020년\")\n",
+    "column_labels = columns1\r\n",
+    "column_labels = columns1+_2019\r\n",
+    "column_labels.append(\"2020년\")\r\n",
     "column_labels = column_labels+_2020"
    ],
    "outputs": [],
@@ -59,10 +59,10 @@
    "cell_type": "code",
    "execution_count": 5,
    "source": [
-    "np.array(data)\n",
-    "gunsan_visit = df(np.array(data),columns=column_labels)\n",
-    "gunsan_visit.drop(0,inplace=True)\n",
-    "gunsan_visit.dropna(inplace=True)\n",
+    "np.array(data)\r\n",
+    "gunsan_visit = df(np.array(data),columns=column_labels)\r\n",
+    "gunsan_visit.drop(0,inplace=True)\r\n",
+    "gunsan_visit.dropna(inplace=True)\r\n",
     "gunsan_visit"
    ],
    "outputs": [
@@ -1989,10 +1989,10 @@
    "cell_type": "code",
    "execution_count": 18,
    "source": [
-    "p = sns.lineplot(data=table2.xs(('선유도', '합계')).unstack().T, linestyle='-',marker='o',linewidth = 3,markersize=10)\n",
-    "p.set_ylabel(\"방문객수\")\n",
-    "p.set_xlabel(\"월 별\")\n",
-    "p.set_title(\"선유도 월별 관광객 추이\", fontsize = 20)\n",
+    "p = sns.lineplot(data=table2.xs(('선유도', '합계')).unstack().T, linestyle='-',marker='o',linewidth = 3,markersize=10)\r\n",
+    "p.set_ylabel(\"방문객수\")\r\n",
+    "p.set_xlabel(\"월 별\")\r\n",
+    "p.set_title(\"선유도 월별 관광객 추이\", fontsize = 20)\r\n",
     "plt.show()"
    ],
    "outputs": [
@@ -2013,11 +2013,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "source": [
-    "for indexes in index_list:\n",
-    "    if indexes[1]=='합계':\n",
-    "        p = sns.lineplot(data=table2.xs(indexes).unstack().T)\n",
-    "        p.set_ylabel(\"방문객수\")\n",
-    "        p.set_xlabel(indexes[0])\n",
+    "for indexes in index_list:\r\n",
+    "    if indexes[1]=='합계':\r\n",
+    "        p = sns.lineplot(data=table2.xs(indexes).unstack().T)\r\n",
+    "        p.set_ylabel(\"방문객수\")\r\n",
+    "        p.set_xlabel(indexes[0])\r\n",
     "        plt.show()"
    ],
    "outputs": [
@@ -2145,7 +2145,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "source": [
-    "table3 = pd.pivot_table(gunsan_visit, values=['2019년','2020년'], index=[ '관광지', '내/외국인'], aggfunc=np.sum)\n",
+    "table3 = pd.pivot_table(gunsan_visit, values=['2019년','2020년'], index=[ '관광지', '내/외국인'], aggfunc=np.sum)\r\n",
     "table3.drop(index='군산새만금오토캠핑장',inplace=True)"
    ],
    "outputs": [],
@@ -2164,8 +2164,8 @@
    "cell_type": "code",
    "execution_count": 15,
    "source": [
-    "loc_pre = table3.unstack().fillna(0)\n",
-    "loc_pre.drop(columns='합계', level=1, inplace=True)\n",
+    "loc_pre = table3.unstack().fillna(0)\r\n",
+    "loc_pre.drop(columns='합계', level=1, inplace=True)\r\n",
     "loc_pre['2019년']"
    ],
    "outputs": [
@@ -2286,9 +2286,9 @@
    "cell_type": "code",
    "execution_count": 16,
    "source": [
-    "pie, ax = plt.subplots(figsize=[12,12])\n",
-    "labels = loc_pre['2019년'].index\n",
-    "plt.pie(x=loc_pre['2019년']['내국인'], autopct=\"%.1f%%\", labels=labels, pctdistance=0.7)\n",
+    "pie, ax = plt.subplots(figsize=[12,12])\r\n",
+    "labels = loc_pre['2019년'].index\r\n",
+    "plt.pie(x=loc_pre['2019년']['내국인'], autopct=\"%.1f%%\", labels=labels, pctdistance=0.7)\r\n",
     "plt.title(\"군산 관광지별 방문자수 비율\", fontsize=25)"
    ],
    "outputs": [
@@ -2319,15 +2319,15 @@
    "cell_type": "code",
    "execution_count": 19,
    "source": [
-    "p = sns.barplot(\n",
-    "    data= loc_pre['2019년'],\n",
-    "    x= loc_pre['2019년'].index,\n",
-    "    y= '내국인'\n",
-    ")\n",
-    "p.set_title(\"군산 관광지별 방문자 수 비교\", fontsize = 20)\n",
-    "p.set_ylabel(\"방문자 수\")\n",
-    "p.set_xlabel(\"관광지\")\n",
-    "p.tick_params(labelsize=8)\n",
+    "p = sns.barplot(\r\n",
+    "    data= loc_pre['2019년'],\r\n",
+    "    x= loc_pre['2019년'].index,\r\n",
+    "    y= '내국인'\r\n",
+    ")\r\n",
+    "p.set_title(\"군산 관광지별 방문자 수 비교\", fontsize = 20)\r\n",
+    "p.set_ylabel(\"방문자 수\")\r\n",
+    "p.set_xlabel(\"관광지\")\r\n",
+    "p.tick_params(labelsize=8)\r\n",
     "plt.show()"
    ],
    "outputs": [
@@ -2385,9 +2385,9 @@
    "cell_type": "code",
    "execution_count": 21,
    "source": [
-    "for indexes in index_list:\n",
-    "    if (indexes[0]=='군산근대역사박물관' or indexes[0]=='군산새만금컨벤션센터') and indexes[1]=='외국인' :\n",
-    "        #print(indexes[0])\n",
+    "for indexes in index_list:\r\n",
+    "    if (indexes[0]=='군산근대역사박물관' or indexes[0]=='군산새만금컨벤션센터') and indexes[1]=='외국인' :\r\n",
+    "        #print(indexes[0])\r\n",
     "        table2.xs(indexes).unstack().T.plot(kind='line', xlabel=indexes[0],ylabel=\"외국인 추이\", grid=True)"
    ],
    "outputs": [
@@ -2450,8 +2450,8 @@
    "cell_type": "code",
    "execution_count": 23,
    "source": [
-    "실내외구분 = ['복합','실내','실내','실외','복합','실외','실외','실외','실외','실내','실내']\n",
-    "inout20['실내외구분'] = 실내외구분\n",
+    "실내외구분 = ['복합','실내','실내','실외','복합','실외','실외','실외','실외','실내','실내']\r\n",
+    "inout20['실내외구분'] = 실내외구분\r\n",
     "inout20"
    ],
    "outputs": [
@@ -2755,18 +2755,18 @@
    "cell_type": "code",
    "execution_count": 24,
    "source": [
-    "pivot2 = pd.pivot_table(inout20, values=['01월',\n",
-    " '02월',\n",
-    " '03월',\n",
-    " '04월',\n",
-    " '05월',\n",
-    " '06월',\n",
-    " '07월',\n",
-    " '08월',\n",
-    " '09월',\n",
-    " '10월',\n",
-    " '11월',\n",
-    " '12월'], index=['실내외구분'], aggfunc=np.sum)\n",
+    "pivot2 = pd.pivot_table(inout20, values=['01월',\r\n",
+    " '02월',\r\n",
+    " '03월',\r\n",
+    " '04월',\r\n",
+    " '05월',\r\n",
+    " '06월',\r\n",
+    " '07월',\r\n",
+    " '08월',\r\n",
+    " '09월',\r\n",
+    " '10월',\r\n",
+    " '11월',\r\n",
+    " '12월'], index=['실내외구분'], aggfunc=np.sum)\r\n",
     "pivot2"
    ],
    "outputs": [
@@ -2925,7 +2925,7 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "pivot2.to_csv('./Gunsan_Attractions_in_out2020.csv')"
+    "pivot2.to_csv('../data/Gunsan_Attractions_in_out2020.csv')"
    ],
    "outputs": [],
    "metadata": {}
@@ -2934,9 +2934,9 @@
    "cell_type": "code",
    "execution_count": 26,
    "source": [
-    "X=pivot2.T\n",
-    "비율 = X['실내']/X['실외']\n",
-    "X['실내/실외']=비율\n",
+    "X=pivot2.T\r\n",
+    "비율 = X['실내']/X['실외']\r\n",
+    "X['실내/실외']=비율\r\n",
     "X"
    ],
    "outputs": [
