--- a/음식점 시각화/식신_군산_맛집_위치_분석.ipynb
+++ b/음식점 시각화/식신_군산_맛집_위치_분석.ipynb
@@ -82,12 +82,23 @@
       "source": [
         "import pandas as pd\r\n",
         "import numpy as np\r\n",
-        "import seaborn as sns"
+        "import seaborn as sns\r\n",
+        "import matplotlib.pyplot as plt"
       ],
       "outputs": [],
       "metadata": {
         "id": "g7HbDBFpBsp-"
       }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "source": [
+        "sns.set(rc = {'figure.figsize':(20,10)})\r\n",
+        "plt.rc('font', family='NanumBarunGothic') "
+      ],
+      "outputs": [],
+      "metadata": {}
     },
     {
       "cell_type": "markdown",
@@ -970,11 +981,11 @@
       "cell_type": "code",
       "execution_count": 17,
       "source": [
-        "latitude = 35.81123841910141\n",
-        "longtitude = 126.41626516260177\n",
-        "store = \"선유도\"\n",
-        "folium.Marker([latitude, longtitude], popup = store, tooltip =store,icon = folium.Icon(color='red')).add_to(map)   \n",
-        "\n",
+        "latitude = 35.81123841910141\r\n",
+        "longtitude = 126.41626516260177\r\n",
+        "store = \"선유도\"\r\n",
+        "folium.Marker([latitude, longtitude], popup = store, tooltip =store,icon = folium.Icon(color='red')).add_to(map)   \r\n",
+        "\r\n",
         "map"
       ],
       "outputs": [
